@@ -50,12 +50,18 @@ mp_limb_t calling_conventions_values[17] =
 
 
 /* values to check */
+#ifdef __cplusplus
+extern "C" {
+#endif
 struct {
   unsigned  control;
   unsigned  status;
   unsigned  tag;
   unsigned  other[4];
 } calling_conventions_fenv;
+#ifdef __cplusplus
+}
+#endif
 
 /* expected values, as per x86call.asm */
 #define VALUE_EBX   0x01234567
